<?xml version="1.0" encoding="utf-8"?><!--

    Diary - Personal diary for Android
    Copyright © 2012  Josep Portella Florit <hola@josep-portella.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

  -->

<resources>
  <string name="appName">Diary</string>
  <string name="today">Today</string>
  <string name="prevEntry">Previous</string>
  <string name="nextEntry">Next</string>
  <string name="goToDate">Go to date…</string>
  <string name="addLink">Add link</string>
  <string name="search">Search…</string>
  <string name="findAll">Find all…</string>
  <string name="print">Print…</string>
  <string name="share">Share…</string>
  <string name="addTime">Add time</string>
  <string name="addEvents">Add events</string>
  <string name="addMedia">Add media…</string>
  <string name="editStyles">Edit styles…</string>
  <string name="editScript">Edit script…</string>
  <string name="backup">Backup…</string>
  <string name="choose">Choose a file name</string>
  <string name="storage">Storage</string>
  <string name="start">Start backup</string>
  <string name="complete">Backup complete</string>
  <string name="changes">Save changes?</string>
  <string name="save">Save</string>
  <string name="discard">Discard</string>
  <string name="settings">Settings</string>
  <string name="calendar">Calendar</string>
  <string name="pref_calendar">Use custom calendar</string>
  <string name="pref_calendar_summ">
    Use custom calendar rather than date picker
  </string>
  <string name="markdown">Markdown</string>
  <string name="pref_markdown">Use markdown</string>
  <string name="pref_markdown_summ">
    Use markdown to format entries
  </string>
  <string name="selection">Selection</string>
  <string name="pref_extended">Use extended selection</string>
  <string name="pref_extended_summ">
    Use extended selection while editing entries
  </string>
  <string name="media">Media</string>
  <string name="pref_copy_media">Copy images</string>
  <string name="pref_copy_media_summ">
    Copy inserted images to the current folder
  </string>
  <string name="pref_external">Browser</string>
  <string name="pref_external_summ">
    Use browser for external links
  </string>
  <string name="folder">Folder</string>
  <string name="theme">Theme</string>
  <string translatable="false" name="pref_theme_summ">%s</string>
  <string name="index">Index</string>
  <string name="pref_use_index">Use index</string>
  <string name="pref_use_index_summ">
    Use index page for journal
  </string>
  <string name="pref_index_page">Index page</string>
  <string name="template">Template</string>
  <string name="pref_use_template">Use template</string>
  <string name="pref_use_template_summ">
    Use template for diary entries
  </string>
  <string name="pref_template_page">Template page</string>
  <string name="pref_index_template">Index template</string>
  <string name="about">About</string>
  <string name="pref_about_summ"><a
    href="https://github.com/billthefarmer/diary/releases/latest">Version
    %s</a>
  </string>
  <string name="built">Built %s</string>
  <string name="licence">Licence <a
  href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>
  <string name="copyright">Copyright \u00A9 2012 <a
  href="mailto:hola@josep-portella.com">Josep Portella
  Florit</a>\nCopyright \u00A9 2017 <a
  href="https://billthefarmer.github.io">Bill Farmer</a>\n\nCustom
  calendar by <a
  href="https://github.com/npanigrahy/Custom-Calendar-View">Custom
  Calendar View</a>, Markdown view by <a
  href="https://github.com/falnatsheh/MarkdownView">Markdown View</a>,
  Japanese translation by <a
  href="https://github.com/naofum">naofum</a>, German translation by
  <a href="https://github.com/jaller94">Christian Paul</a>, French
  translation by <a href="https://github.com/comptuzus">David Ta</a>,
  Italian translation by <a href="https://github.com/marcoM32">Marco
  Magliano</a>, Polish translation by <a
  href="https://github.com/bla-ke">Daria Szatan</a>, Simplified
  Chinese translation by <a
  href="https://github.com/Therhokar">Therhokar Yang</a>, Brazilian
  Portuguese translation by <a
  href="https://github.com/jeisoncp">Jeison Pandini</a>, Dutch
  translation by <a href="https://github.com/Vistaus">Heimen
  Stoffels</a>, File utilities by <a
  href="https://github.com/iPaulPro">Paul Burke</a>
  </string>
</resources>
