<?xml version="1.0" encoding="utf-8"?>
<!--

    Diary - Personal diary for Android
    Copyright (C) 2017	Bill Farmer

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_custom_category"
      android:title="@string/calendar">

    <CheckBoxPreference
	android:key="pref_custom"
	android:icon="?attr/pref_calendar"
	android:title="@string/pref_calendar"
	android:summary="@string/pref_calendar_summ"
	android:persistent="true"
	android:defaultValue="true" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_markdown_category"
      android:title="@string/markdown">

    <CheckBoxPreference
	android:key="pref_markdown"
	android:icon="?attr/pref_markdown"
	android:title="@string/pref_markdown"
	android:summary="@string/pref_markdown_summ"
	android:persistent="true"
	android:defaultValue="true" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_folder_category"
      android:title="@string/folder">

    <EditTextPreference
        android:key="pref_folder"
	android:icon="?attr/pref_folder"
	android:title="@string/folder"
	android:persistent="true"
	android:defaultValue="Diary" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_index_category"
      android:title="@string/index">

    <CheckBoxPreference
	android:key="pref_use_index"
	android:icon="?attr/pref_use_index"
	android:title="@string/pref_use_index"
	android:summary="@string/pref_use_index_summ"
	android:persistent="true"
	android:defaultValue="false" />

    <org.billthefarmer.diary.DatePickerPreference
        android:key="pref_index_page"
	android:icon="?attr/pref_index_page"
	android:dialogIcon="?attr/pref_index_page"
	android:title="@string/pref_index_page"
	android:summary="@string/pref_index_page_summ" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_media_category"
      android:title="@string/media">

    <CheckBoxPreference
	android:key="pref_copy_media"
	android:icon="?attr/pref_copy_media"
	android:title="@string/pref_copy_media"
	android:summary="@string/pref_copy_media_summ"
	android:persistent="true"
	android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_theme_category"
      android:title="@string/theme">

    <CheckBoxPreference
	android:key="pref_dark_theme"
	android:icon="?attr/pref_dark_theme"
	android:title="@string/pref_dark_theme"
	android:summary="@string/pref_dark_theme_summ"
	android:persistent="true"
	android:defaultValue="false" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/about">

    <org.billthefarmer.diary.AboutPreference
	android:key="pref_about"
	android:icon="?attr/pref_about"
	android:dialogIcon="?attr/pref_about"
	android:negativeButtonText=""
	android:title="@string/about"
	android:summary="@string/pref_about_summ"
	android:dialogLayout="@layout/about" />

  </PreferenceCategory>

</PreferenceScreen>
