<?xml version="1.0" encoding="utf-8"?><!--

Diary - Personal diary for Android
Copyright © 2012  Josep Portella Florit <hola@josep-portella.com>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">
  <item
      android:id="@+id/cancel"
      android:icon="@drawable/ic_clear_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@android:string/cancel"
      android:visible="false" />
  <item
      android:id="@+id/prevEntry"
      android:icon="@drawable/ic_action_previous"
      android:showAsAction="ifRoom"
      android:title="@string/prevEntry" />
  <item
      android:id="@+id/nextEntry"
      android:icon="@drawable/ic_action_next"
      android:showAsAction="ifRoom"
      android:title="@string/nextEntry" />
  <item
      android:id="@+id/today"
      android:icon="@drawable/ic_action_today"
      android:showAsAction="ifRoom"
      android:title="@string/today" />
  <item
      android:id="@+id/goToDate"
      android:icon="@drawable/ic_date_range_white_24dp"
      android:showAsAction="ifRoom"
      android:title="@string/goToDate" />
  <item
      android:id="@+id/index"
      android:icon="@drawable/ic_action_today"
      android:showAsAction="ifRoom"
      android:title="@string/index"
      android:visible="false" />
  <item
      android:id="@+id/link"
      android:showAsAction="never"
      android:title="@string/addLink"
      android:visible="false" />
  <item
      android:id="@+id/search"
      android:actionViewClass="android.widget.SearchView"
      android:showAsAction="ifRoom|collapseActionView"
      android:title="@string/search" />
  <item
      android:id="@+id/findAll"
      android:showAsAction="never"
      android:title="@string/findAll"
      android:visible="false" />
  <item
      android:id="@+id/print"
      android:showAsAction="never"
      android:title="@string/print" />
  <item
      android:id="@+id/share"
      android:showAsAction="never"
      android:title="@string/share" />
  <item
      android:id="@+id/addTime"
      android:showAsAction="never"
      android:title="@string/addTime" />
  <item
      android:id="@+id/addEvents"
      android:showAsAction="never"
      android:title="@string/addEvents" />
  <item
      android:id="@+id/addMedia"
      android:showAsAction="never"
      android:title="@string/addMedia" />
  <item
      android:id="@+id/editStyles"
      android:showAsAction="never"
      android:title="@string/editStyles" />
  <item
      android:id="@+id/editScript"
      android:showAsAction="never"
      android:title="@string/editScript" />
  <item
      android:id="@+id/backup"
      android:showAsAction="never"
      android:title="@string/backup" />
  <item
      android:id="@+id/settings"
      android:showAsAction="never"
      android:title="@string/settings" />
</menu>
