<?xml version="1.0" encoding="utf-8"?><!--

    Diary - Personal diary for Android
    Copyright (C) 2017	Bill Farmer

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:id="@+id/about"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginRight="32dp"
      android:text="@string/pref_about_summ" />

  <TextView
      android:id="@+id/built"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/built" />

  <TextView
      android:id="@+id/copyright"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/copyright" />

  <TextView
      android:id="@+id/licence"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:text="@string/licence" />

</LinearLayout>
